tests/semantic_errors/andrei9_4.tl
require "ifj21"

function main()
    local id : string = 12 + 90 - 76 * 9.7
end

main()
